Android: Added Settings activity. Android: Formatted the Update Library fragment.
Related to issue #406.


git-svn-id: http://hamster-svn/svn/repos/base@691 765c1f7c-9fb8-954f-9ff8-dd0915cb3117

--- a/MPfm/branches/current/MPfm.Android/Resources/Layout/Fragment_UpdateLibrary.axml
+++ b/MPfm/branches/current/MPfm.Android/Resources/Layout/Fragment_UpdateLibrary.axml
@@ -4,32 +4,42 @@
     android:orientation="vertical"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent">
-
-  <TextView
-    android:id="@+id/fragment_updateLibrary_lblTitle"
-    android:text="[Title]"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:gravity="center_horizontal"
-    android:padding="6dip" />
-  <TextView
-    android:id="@+id/fragment_updateLibrary_lblSubtitle"
-    android:text="[Subtitle]"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:gravity="center_horizontal"
-    android:padding="6dip" />
-  <ProgressBar
-    android:id="@+id/fragment_updateLibrary_progressBar"
-    android:max="100"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:gravity="center_horizontal"
-  />
-  <Button
-    android:id="@+id/fragment_updateLibrary_button"
-    android:layout_width="fill_parent"
-    android:layout_height="wrap_content"
-    android:text="Cancel"
-    />
+    <RelativeLayout
+        android:id="@+id/fragment_updateLibrary_relativeLayout"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="8dp">
+        <ProgressBar
+            android:id="@+id/fragment_updateLibrary_progressBar"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:indeterminate="true" />
+        <TextView
+            android:id="@+id/fragment_updateLibrary_lblTitle"
+            android:text="[Title]"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="left"
+            android:padding="6dip"
+            android:layout_toRightOf="@id/fragment_updateLibrary_progressBar"
+            android:textSize="18dp"
+            android:textColor="#FFFFFF" />
+        <TextView
+            android:id="@+id/fragment_updateLibrary_lblSubtitle"
+            android:text="[Subtitle]"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="left"
+            android:padding="6dip"
+            android:layout_below="@id/fragment_updateLibrary_lblTitle"
+            android:layout_toRightOf="@id/fragment_updateLibrary_progressBar"
+            android:textSize="14dp"
+            android:ellipsize="end"
+            android:singleLine="true" />
+    </RelativeLayout>
+    <Button
+        android:id="@+id/fragment_updateLibrary_button"
+        android:text="Cancel"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content" />
 </LinearLayout>
