--- a/MPfm/branches/current/MPfm.Android/Resources/Layout/Settings.axml
+++ b/MPfm/branches/current/MPfm.Android/Resources/Layout/Settings.axml
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/main_layout"
+    android:id="@+id/settings_layout"
     android:orientation="horizontal"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent">
 
   <android.support.v4.view.ViewPager
-    android:id="@+id/main_pager"
+    android:id="@+id/settings_pager"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
