--- a/MPfm/MPfm.Android/Resources/Layout/Main.axml
+++ b/MPfm/MPfm.Android/Resources/Layout/Main.axml
@@ -11,4 +11,10 @@
     android:layout_height="match_parent">
 
   </android.support.v4.view.ViewPager>
+
+  <FrameLayout
+    android:id="@+id/main_fragment_container"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
+  </FrameLayout>
 </LinearLayout>
