--- a/MPfm/MPfm.Android/Resources/Layout/GenericCell.axml
+++ b/MPfm/MPfm.Android/Resources/Layout/GenericCell.axml
@@ -5,8 +5,8 @@
    android:orientation="horizontal">
   <ImageView
     android:id="@+id/genericcell_image"
-    android:layout_width="30dp"
-    android:layout_height="fill_parent"
+    android:layout_width="70dp"
+    android:layout_height="70dp"
     android:src="@drawable/icon"
    />
   <TextView
@@ -14,6 +14,6 @@
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:textColor="#FF000000"
-      android:textSize="30dip"
+      android:textSize="20dip"
      />
 </LinearLayout>
